{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 157,
  "lineage": "22303b57-e31e-0c73-26bf-1e5535920839",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tfub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkInterfaces/nic-ubuntu-02-dev-eastus",
            "internal_domain_name_suffix": "drd5ev0hb21u3afphdr1fztyxf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "NicConfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/publicIPAddresses/pip-ubuntu-02-dev-eastus",
                "subnet_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/virtualNetworks/vnet-ubuntu-02-dev-eastus/subnets/snet-ubuntu-02-dev-eastus"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-1F-B4-9F",
            "name": "nic-ubuntu-02-dev-eastus",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "tags": {
              "ApplicationName": "ubuntu-02",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "virtual_machine_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Compute/virtualMachines/vm-ubuntu-02-dev-eastus"
          },
          "dependencies": [
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkInterfaces/nic-ubuntu-02-dev-eastus|/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu-02-dev-eastus",
            "network_interface_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkInterfaces/nic-ubuntu-02-dev-eastus",
            "network_security_group_id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu-02-dev-eastus"
          },
          "dependencies": [
            "azurerm_network_interface.tfub_nic",
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_public_ip.tfub_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.tfub_subnet",
            "azurerm_virtual_network.tfub_network",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "tfub_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu-02-dev-eastus",
            "location": "eastus",
            "name": "nsg-ubuntu-02-dev-eastus",
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgr-icmp",
                "priority": 1102,
                "protocol": "Icmp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgr-SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "ApplicationName": "ubuntu-02",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu-02-dev-eastus/securityRules/nsgr-icmp",
            "name": "nsgr-icmp",
            "network_security_group_name": "nsg-ubuntu-02-dev-eastus",
            "priority": 1102,
            "protocol": "Icmp",
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/networkSecurityGroups/nsg-ubuntu-02-dev-eastus/securityRules/nsgr-SSH",
            "name": "nsgr-SSH",
            "network_security_group_name": "nsg-ubuntu-02-dev-eastus",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.tfub_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "tfub_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "ubuntu-02-lrkkty",
            "fqdn": "ubuntu-02-lrkkty.eastus.cloudapp.azure.com",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/publicIPAddresses/pip-ubuntu-02-dev-eastus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.36.253",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-ubuntu-02-dev-eastus",
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ApplicationName": "ubuntu-02",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.rnd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tfub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/virtualNetworks/vnet-ubuntu-02-dev-eastus/subnets/snet-ubuntu-02-dev-eastus",
            "name": "snet-ubuntu-02-dev-eastus",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "virtual_network_name": "vnet-ubuntu-02-dev-eastus"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.tfub_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "tfub_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "57f2471c-0f47-4e37-80af-38e3b2e678bd",
            "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/virtualNetworks/vnet-ubuntu-02-dev-eastus",
            "location": "eastus",
            "name": "vnet-ubuntu-02-dev-eastus",
            "resource_group_name": "rg-ubuntu-02-dev-eastus",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a1e01a15-61aa-4f25-aa66-6d6e8a913dc3/resourceGroups/rg-ubuntu-02-dev-eastus/providers/Microsoft.Network/virtualNetworks/vnet-ubuntu-02-dev-eastus/subnets/snet-ubuntu-02-dev-eastus",
                "name": "snet-ubuntu-02-dev-eastus"
              }
            ],
            "tags": {
              "ApplicationName": "ubuntu-02",
              "CostCenter": "PI-31416",
              "Env": "dev",
              "Source": "terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}